# SVMP-CS

./: .env.example  .gitignore  README.md  requirements.md  requirements.txt  system_architecture.md
docs/: auth_billing_model.md  customer_portal.md  dashboard_api.md  onboarding_and_seed_generation_architecture.md  production_portal_launch.md  (+2 more)
svmp-core/: pyproject.toml
svmp-core/svmp_core/: __init__.py  config.py  exceptions.py  logger.py  main.py
svmp-core/svmp_core/core/: __init__.py  domain_filter.py  identity_frame.py  intent_fork.py  onboarding.py  response_gen.py  similarity_gate.py
svmp-core/svmp_core/db/: __init__.py  base.py  mongo.py
svmp-core/svmp_core/integrations/: __init__.py  openai_client.py  whatsapp_provider.py
svmp-core/svmp_core/models/: __init__.py  governance.py  knowledge.py  onboarding.py  session.py  webhook.py
svmp-core/svmp_core/routes/: __init__.py  onboarding.py  webhook.py
svmp-core/svmp_core/workflows/: workflow_a.py  workflow_b.py  workflow_c.py
svmp-core/tests/: conftest.py  test_config.py  test_exceptions.py  test_logger.py
svmp-core/tests/integration/: test_db_mongo.py  test_demo_smoke.py  test_main.py  test_onboarding_pipeline.py  test_onboarding_route.py  test_openai_client.py  test_seed_script.py  test_seed_tenant_script.py  test_webhook_route.py  test_whatsapp_provider.py  test_workflow_a.py  test_workflow_b.py  test_workflow_c.py
svmp-core/tests/unit/: test_domain_filter.py  test_fixtures_smoke.py  test_identity_frame.py  test_intent_fork.py  test_models.py  test_response_gen.py  test_similarity_gate.py
(+83 files in other folders)
